--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <title>Lean Coffee</title>
+  <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="static/app.css"/>
 </head>
 <body ng-cloak>
@@ -11,10 +11,7 @@
   <!-- start body section -->
   <div ng-view></div>
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-  -->
-  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular.min.js"></script>
   <script src="static/app.js"></script>
   <script src="socket.io/socket.io.js"></script>
 </body>
