--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="lean-coffee">
+<html lang="en" ng-app="tic-tac-toe">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
@@ -11,7 +11,8 @@
   <!-- start body section -->
   <div ng-view></div>
 
-  <script src="lib/angular.min.js"></script>
+  <script src="lib/angular.js"></script>
+  <script src="lib/angular-route.js"></script>
   <script src="static/app.js"></script>
   <script src="socket.io/socket.io.js"></script>
 </body>
