Added in styling with unsemantic.

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="lib/unsemantic-responsive.css">
   <link rel="stylesheet" href="static/app.css"/>
 </head>
 <body ng-cloak>
   <!-- Body Section -->
   <!-- start body section -->
-  <div ng-view></div>
+  <div class="grid-container" ng-view></div>
 
   <script src="lib/angular.js"></script>
   <script src="lib/angular-route.js"></script>
